syntax = "proto3";

package dest;

service Database {
  rpc DeleteDatabase (BaseRequest) returns (BaseResponse) {}
  rpc GetDatabase (BaseRequest) returns (BaseResponse) {}
  rpc PostDatabase (SchemasRequest) returns (BaseResponse) {}
}

// Base

enum BaseType {
  DEFAULT_TYPE = 0;
  SQLITE = 2049;
  MARIADB = 3306;
  MYSQL8 = 3307;
}

message BaseRequest {
  BaseType type = 1;
  string name = 2;
}

message BaseResponse {
  bool success = 1;
}

// Schema

message SchemasRequest {
  BaseType type = 1;
  string name = 2;
  repeated string schemas = 3;
}
